--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@heroicons/vue": "^2.0.0",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
+    "element-plus": "^2.4.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vuex": "^4.0.2"
@@ -50,6 +51,8 @@
     "start-server-and-test": "^2.0.1",
     "tailwindcss": "^3.3.5",
     "typescript": "~5.2.0",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11",
     "vitest": "^0.34.6",
     "vue-tsc": "^1.8.19"
